# Smart-Stadiums---Tournament-Operations

./: .env.example  .gitignore  .vercelignore  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  vercel.json
.github/workflows/: ci.yml
api/: index.py  requirements.txt
app/: __init__.py  config.py  main.py  security.py
app/ai/: claude_engine.py  local_engine.py  nlu.py  prompts.py
app/api/: deps.py  routes_chat.py  routes_meta.py  routes_ops.py  schemas.py
app/data/: matches.json  stadiums.json
app/services/: assistant.py  crowd.py  incidents.py  knowledge.py  navigation.py
static/: index.html  ops.html
static/css/: styles.css
static/js/: app.js  common.js  ops.js
tests/: conftest.py  test_api.py  test_assistant.py  test_crowd.py  test_edge_cases.py  test_engines.py  test_local_engine.py  test_navigation.py  test_security.py
