[project]
name = "stadiumiq"
version = "1.0.0"
description = "GenAI matchday copilot for FIFA World Cup 2026 venues"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "StadiumIQ contributors" }]
keywords = ["fifa-world-cup-2026", "genai", "stadium", "fastapi", "accessibility"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, bugbear, comprehensions, pyupgrade, simplify.
select = ["E", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["B008"]  # FastAPI Depends()/Query() defaults are the framework idiom.

[tool.ruff.lint.per-file-ignores]
# These modules are content, not logic: keeping each translated sentence and
# keyword set on one line is far more readable than wrapping mid-phrase.
"app/ai/local_engine.py" = ["E501"]  # trilingual response templates
"app/ai/nlu.py" = ["E501"]           # multilingual keyword-set literals

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.mypy]
python_version = "3.10"
files = ["app", "api", "run.py"]
# Full-signature enforcement on the application code.
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
# warn_return_any stays off: the venue knowledge base and phrase packs are
# JSON-shaped dict[str, Any] data, so template lookups legitimately return Any;
# their shapes are enforced by the test suite instead.

[[tool.mypy.overrides]]
# The Anthropic SDK is an optional runtime dependency (imported lazily).
module = "anthropic.*"
ignore_missing_imports = true

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
skip_covered = true
